# ryans-restaurant-app

./: .env.test  Cargo.toml  Readme.md  Rocket.toml  \  docker-compose.yml
src/: lib.rs  main.rs
src/api/: mod.rs  tables.rs
src/db/: memdb.rs  mod.rs  mysql.rs
src/domain/: tables.rs
src/protocol/: protocol.rs
