[package]
name = "ryans-restaurant-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
mysql = "25.0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
dotenv = "0.15"
url = "2.2"
